= 1.1.16 = 2021-12-13 * FIXED: Author not showing on Add/Edit snippet screen * ADDED: PRO banner * UPDATED: Text & Plugin icon

--- a/css/style-general-admin.css
+++ b/css/style-general-admin.css
@@ -91,3 +91,9 @@
 .hfcm-warning-notice {
   padding: 10px;
 }
+.dashicons-hfcm {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px auto;
+  background-image: url("../images/99robots-logo-avatar.svg");
+}
